# src/app/static/openapi.yml
@@ -261,6 +261,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Citation'
+        '404':
+          description: Paper not found
+        '500':
+          description: Error retrieving citations
+        '403':
+          description: Not enough API credits
   /api/papers/{paper_id}/latest-citations:
     get:
       description: Get the latest citations for a paper
@@ -294,6 +300,22 @@ paths:
       responses:
         '201':
           description: Created successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Citation'
+        '500':
+          description: Error retrieving citations for one or more papers. Returns citations for all papers that were successfully retrieved.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Citation'
+        '403':
+          description: Ran out of API credits. Returns citations for all papers that were successfully retrieved.
           content:
             application/json:
               schema:
